--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.2.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "javascript-time-ago": "^2.5.9",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-fullwidth-image": "^0.1.3",
